--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -52,7 +52,8 @@ spec:
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         imagePullPolicy: IfNotPresent
-      imagePullSecrets: yumizuq-pull-secret
+      imagePullSecrets:
+        - name: yumizuq-pull-secret
       securityContext: {}
   revisionHistoryLimit: 10
   progressDeadlineSeconds: 600
